deploy/kubectl/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: default
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    port: 80
    protocol: HTTP
  - name: https
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
  - name: kubeapi
    port: 6443
    protocol: TLS
    tls:
      mode: Passthrough
